coupons, gifts --> admin and generate coupon during registration
